overflow body fixed

--- a/public/style.scss
+++ b/public/style.scss
@@ -2,7 +2,10 @@
 
 }
 
-
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
 
 body{
   margin: 50px auto !important;
